[gd_scene load_steps=2 format=3 uid="uid://b1h2i3j4k5l6"]

[ext_resource type="Script" path="res://scripts/ui/game_over.gd" id="1_game_over"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_over")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.9)

[node name="GameOverContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverTitle" type="Label" parent="GameOverContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="GameOverContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="GameOverContainer"]
layout_mode = 2
text = "Final Score: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="GameOverContainer"]
layout_mode = 2
text = "High Score: 0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="GameOverContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="GameOverContainer"]
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="GameOverContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "PLAY AGAIN"

[node name="LeaderboardButton" type="Button" parent="GameOverContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "LEADERBOARD"

[node name="MainMenuButton" type="Button" parent="GameOverContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "MAIN MENU"

[connection signal="pressed" from="GameOverContainer/ButtonContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="GameOverContainer/ButtonContainer/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="GameOverContainer/ButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]